NetBSD Problem Report #42719

From www@NetBSD.org  Tue Feb  2 09:51:32 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 4948363B9FC
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  2 Feb 2010 09:51:32 +0000 (UTC)
Message-Id: <20100202095132.21B9763B886@www.NetBSD.org>
Date: Tue,  2 Feb 2010 09:51:32 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing parameter in if_il.c
X-Send-Pr-Version: www-1.0

>Number:         42719
>Category:       kern
>Synopsis:       Missing parameter in if_il.c
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 02 09:55:00 +0000 2010
>Closed-Date:    Tue Feb 02 15:03:50 +0000 2010
>Last-Modified:  Tue Feb 02 15:03:50 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Missing parameter found by cppcheck.
>How-To-Repeat:

>Fix:
diff -u -r1.24 if_il.c
--- sys/dev/qbus/if_il.c	12 May 2009 14:43:33 -0000	1.24
+++ sys/dev/qbus/if_il.c	2 Feb 2010 09:18:53 -0000
@@ -444,7 +444,8 @@
 		char bits[64];

 		snprintb(bits, sizeof(bits), IL_BITS, IL_RCSR(IL_CSR));
-		aprint_error_dev(&sc->sc_dev, "stray xmit interrupt, csr=%s\n",
+		aprint_error_dev(&sc->sc_dev,
+			 	"stray xmit interrupt, csr=%s\n", bits);
 		return;
 	}


>Release-Note:

>Audit-Trail:
From: Thomas Klausner <wiz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42719 CVS commit: src/sys/dev/qbus
Date: Tue, 2 Feb 2010 14:58:46 +0000

 Module Name:	src
 Committed By:	wiz
 Date:		Tue Feb  2 14:58:46 UTC 2010

 Modified Files:
 	src/sys/dev/qbus: if_il.c

 Log Message:
 Fix incomplete line (deleto?), found by cppcheck and reported by
 Henning Petersen in PR 42719.


 To generate a diff of this commit:
 cvs rdiff -u -r1.24 -r1.25 src/sys/dev/qbus/if_il.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Tue, 02 Feb 2010 15:03:50 +0000
State-Changed-Why:
Fixed, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.