Fix incomplete line (deleto?), found by cppcheck and reported by Henning Petersen in PR 42719.